--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -175,8 +175,10 @@ set-window-option -g clock-mode-colour green #green
 ###################
 
 # Make C-j display a selectable list of sessions
-#bind C-j choose-tree
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-j choose-tree
+#tus-current-bg default
+#  17 set-window-option -g window-status-currentatus-current-bg default
+#    17 set-window-option -g window-status-currentbind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 # Quick session switching back and forth. I never use the built in layouts
 # (default mapping for Space), so I reclaimed the key for this
